--- a/public/500.html
+++ b/public/500.html
@@ -1,25 +1,52 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>We're sorry, but something went wrong (500)</title>
-  <style type="text/css">
-    body { background-color: #fff; color: #666; text-align: center; font-family: arial, sans-serif; }
-    div.dialog {
-      width: 25em;
-      padding: 0 4em;
-      margin: 4em auto 0 auto;
-      border: 1px solid #ccc;
-      border-right-color: #999;
-      border-bottom-color: #999;
-    }
-    h1 { font-size: 100%; color: #f00; line-height: 1.5em; }
-  </style>
-</head>
-
-<body>
-  <!-- This file lives in public/500.html -->
-  <div class="dialog">
-    <h1>We're sorry, but something went wrong.</h1>
-  </div>
-</body>
+<html lang='en'>
+  <head>
+    <meta charset='utf-8'>
+    <meta content='IE=Edge,chrome=1' http-equiv='X-UA-Compatible'>
+    <meta content='width=device-width, initial-scale=1.0' name='viewport'>
+    <title>My Best Drink | 500 Error</title>
+    <script>
+      //<![CDATA[
+        var bg = new Image();
+        bg.src = '/assets/background.jpg';
+      //]]>
+    </script>
+    <!--[if lt IE 9]>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
+    <![endif]-->
+    <link href="/assets/bootstrap_and_overrides.css?body=1" media="all" rel="stylesheet" type="text/css" />
+    <link href="/assets/application.css?body=1" media="all" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
+    <header class='white-bar'>
+      <nav class='mainnav fancy'>
+        <div class='leftnav align-right'>
+          <a href="/drinks">Drinks</a>
+          <a href="/learn-mixology">Learn</a>
+          <a href="/mixologists">Mixologists</a>
+        </div>
+        <div class='mainicon center'>
+          <a href="/"><img alt="Mbd-icon" src="/assets/mbd-icon.png" /></a>
+        </div>
+        <div class='rightnav'>
+          <a href="/sign_in">Sign in</a>
+          <a href="/users/sign_up">Register</a>
+          <a href="/about">About</a>
+        </div>
+        <br clear='all'>
+      </nav>
+    </header>
+    <div class='main container'>
+      <div class='body content'>
+        <div class='row'>
+          <div class="page-header">
+            <h1>Oops! This is a 500, good sir.</h1>
+          </div>
+        </div>
+      </div>
+    </div>
+    <footer class='fancy center white-bar'>
+      <p>www.MyBestDrink.com</p>
+    </footer>
+  </body>
 </html>
