--- a/public/404.html
+++ b/public/404.html
@@ -12,7 +12,7 @@
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
     <![endif]-->
-    <link href="/assets/bootstrap_and_overrides.css?body=1" media="all" rel="stylesheet" type="text/css" />
+    <link href="/assets/application.css" media="all" rel="stylesheet" type="text/css" />
     <style type="text/css" media="screen">
       body {
         background: #565759 url("/assets/404-bg.png") repeat-x scroll 0 0;
